gcc/testsuite/rust/rustc/ui/error-codes/E0411.rs
fn main() {
    <Self>::foo; // { dg-error ".E0411." "" { target *-*-* } }
}

